fix dropdown menu text disappear on small

--- a/Serene/Serene.Web/Content/adminlte/skins/skin-yellow-light.less
+++ b/Serene/Serene.Web/Content/adminlte/skins/skin-yellow-light.less
@@ -25,7 +25,6 @@
               background-color: rgba(255,255,255,0.1);
             }
             a {
-              color: #fff;
               &:hover {
                 background: darken(@yellow, 5%);
               }
